src/components/navbar/navbar.scss
@import "../../global.scss";

.navbar {
  width: 100%;
  background-color: $navyblue;
  color: white;
  height: $navbarHeight;
  position: fixed;
  top: 0;
  z-index: 2;
  transition: all 1s ease;

  .wrapper {
    padding: 10px 30px;
    display: flex;
    align-items: center;
    justify-content: space-between;

    .left {
      display: flex;
      align-items: center;

      .logo {
        font-size: 40px;
        font-weight: 700;
        color: inherit;
      }
    }

    .right {
      display: flex;
      align-items: center;

      .hamburger {
        width: 32px;
        height: 25px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        cursor: pointer;

        span {
          width: 100%;
          height: 3px;
          background-color: white;
          transform-origin: left;
          transition: all 1s ease;
        }
      }
    }
  }

  .wrapper * {
    font-size: 40px;
    a {
      padding: 0px 30px 0px 30px;
      text-decoration: none;
      color: inherit;
    }
  }

  &.active {
    background-color: $eggshell;
    color: black;

    .hamburger {
      span {
        &:first-child {
          background-color: black;
          transform: rotate(45deg);
        }
        &:nth-child(2) {
          opacity: 0;
        }
        &:last-child {
          background-color: black;
          transform: rotate(-45deg);
        }
      }
    }
  }
}

